# aoc_2024

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md
day1/: CMakeLists.txt
day1/include/: day1.h
day1/src/: main.c
day10/: CMakeLists.txt
day10/include/: day10.h
day10/src/: main.c  utils.c
day11/: CMakeLists.txt
day11/include/: day11.h
day11/src/: main.c  utils.c
day12/: CMakeLists.txt
day12/include/: day12.h
day12/src/: main.c  utils.c
day13/: CMakeLists.txt
day13/include/: day13.h
day13/src/: main.c
day14/: CMakeLists.txt
day14/include/: day14.h
day14/src/: main.c
day2/: CMakeLists.txt
day2/include/: day2.h
day2/src/: main.c
day3/: CMakeLists.txt
day3/include/: day3.h
day3/src/: main.c
day4/: CMakeLists.txt
day4/include/: day4.h
day4/src/: main.c
day5/: CMakeLists.txt
day5/include/: day5.h
day5/src/: main.c
day6/: CMakeLists.txt
day6/include/: day6.h
day6/src/: main.c  utils.c
day7/: CMakeLists.txt
day7/include/: day7.h
day7/src/: main.c
day8/: CMakeLists.txt
day8/include/: day8.h
day8/src/: main.c  utils.c
day9/: CMakeLists.txt
day9/include/: day9.h
day9/src/: main.c
include/: aoc_2024.h  aoc_2024_defs.h
scripts/: get_project_name.sh
templates/day/: CMakeLists.txt
templates/day/include/: day.h
templates/day/src/: main.c
